# test1

./: DESIGN_UI_UX.md  DOCUMENTACAO_TECNICA.md  EDITAL_CENTELHA_III.md  GUIA_TESTE_CELULAR.md  PITCH_3_MINUTOS.md  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/auroraedge/app/adapter/: ChatAdapter.kt
app/src/main/java/com/auroraedge/app/ai/: AIModelManager.kt
app/src/main/java/com/auroraedge/app/model/: ChatMessage.kt
app/src/main/java/com/auroraedge/app/ui/: ChatActivity.kt
app/src/main/res/drawable/: bubble_ai.xml  bubble_system.xml  bubble_user.xml
app/src/main/res/layout/: activity_chat.xml  item_message_ai.xml  item_message_system.xml  item_message_user.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
